[tool.poetry]
name = "hello-pulumi"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]
license = "Unlicense"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pulumi = "^3.137.0"
pulumi-docker = "^4.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
